--- a/.github/workflows/azure-dev.yml
+++ b/.github/workflows/azure-dev.yml
@@ -35,7 +35,7 @@ jobs:
           dotnet-version: 9.x
 
       - name: Install azd
-        uses: Azure/setup-azd_v2.1.0
+        uses: Azure/setup-azdv2.1.0
 
       - name: Install .NET Aspire workload
         run: dotnet workload install aspire
