--- a/transactionnotes.Web/transactionnotes.Web.csproj
+++ b/transactionnotes.Web/transactionnotes.Web.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="9.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\transactionnotes.ServiceDefaults\transactionnotes.ServiceDefaults.csproj" />
   </ItemGroup>
 
