--- a/.gitignore
+++ b/.gitignore
@@ -487,4 +487,4 @@ $RECYCLE.BIN/
 aspirate-output/
 aspirate-state.json
 manifest.json
-transactionnotes.AppHost/appsettings.Development.json
+transactionnotes.Web/appsettings.Development.json
