Add middleware into the api app to debug verify that the JWT is supplied, and is valid.

--- a/transactionnotes.ApiService/appsettings.Development.json
+++ b/transactionnotes.ApiService/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "TransNotes": {
+    "Authority": "https://auth.nganfamily.com/realms/transactionnotes/",
+    "ClientSecret": "MQw3cbdPgvlqiELVVGHrtPy8TW6ASo50",
+    "ClientId": "transactionnotes"
   }
 }
