Added Authorization to transactionnotes API, via Authorization Header JWT token in bearer
To make this work, the transactionnotes client in Keycloack must be configured with an audience of 'transactionnotes' using these instructions https://dev.to/metacosmos/how-to-configure-audience-in-keycloak-kp4

--- a/.gitignore
+++ b/.gitignore
@@ -488,3 +488,4 @@ aspirate-output/
 aspirate-state.json
 manifest.json
 transactionnotes.Web/appsettings.Development.json
+transactionnotes.ApiService/appsettings.Development.json
