--- a/.gitignore
+++ b/.gitignore
@@ -489,3 +489,4 @@ aspirate-state.json
 manifest.json
 transactionnotes.Web/appsettings.Development.json
 transactionnotes.ApiService/appsettings.Development.json
+transactionnotes.AppHost/appsettings.Development.json
