--- a/transactionnotes.Database/CentralDb/CentralDb.csproj
+++ b/transactionnotes.Database/CentralDb/CentralDb.csproj
@@ -9,8 +9,10 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.66" />
+    <PackageReference Include="dbup-postgresql" Version="6.0.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
     <PackageReference Include="Npgsql" Version="9.0.3" />
   </ItemGroup>
 
