--- a/transactionnotes.Database/CentralDb/CentralDb.csproj
+++ b/transactionnotes.Database/CentralDb/CentralDb.csproj
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="dbup-postgresql" Version="6.0.3" />
@@ -14,6 +15,12 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
     <PackageReference Include="Npgsql" Version="9.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4" />
+  </ItemGroup>
+
+  
+  <ItemGroup>
+    <ProjectReference Include="..\..\transactionnotes.ServiceDefaults\transactionnotes.ServiceDefaults.csproj" />
   </ItemGroup>
 
 </Project>
