--- a/transactionnotes.Tests/transactionnotes.Tests.csproj
+++ b/transactionnotes.Tests/transactionnotes.Tests.csproj
@@ -12,8 +12,8 @@
     <PackageReference Include="Aspire.Hosting.Testing" Version="9.0.0" />
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
-    <PackageReference Include="xunit" Version="2.9.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
+    <PackageReference Include="xunit.v3" Version="2.0.1" />
   </ItemGroup>
 
   <ItemGroup>
