--- a/transactionnotes.AppHost/transactionnotes.AppHost.csproj
+++ b/transactionnotes.AppHost/transactionnotes.AppHost.csproj
@@ -15,6 +15,7 @@
     <ProjectReference Include="..\transactionnotes.ApiService\transactionnotes.ApiService.csproj" />
     <ProjectReference Include="..\transactionnotes.Web\transactionnotes.Web.csproj" />
     <ProjectReference Include="..\transactionnotes.Database\CentralDb\CentralDb.csproj" />
+    <ProjectReference Include="..\transactionnotes.Tests\transactionnotes.Tests.csproj" />
   </ItemGroup>
 
   <ItemGroup>
