--- a/transactionnotes.Database/centraldb-migration/centraldb-migration.csproj
+++ b/transactionnotes.Database/centraldb-migration/centraldb-migration.csproj
@@ -9,6 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="dbup-core" Version="6.0.4" />
+    <PackageReference Include="dbup-postgresql" Version="6.0.3" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
   </ItemGroup>
 </Project>
