Structured roles in postgres central database

--- a/transactionnotes.Database/centraldb-migration/appsettings.Development.json
+++ b/transactionnotes.Database/centraldb-migration/appsettings.Development.json
@@ -4,5 +4,17 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Database": {
+    "Central": {
+      "MigrationUser": {
+        "Username": "migrationuser",
+        "Password": "Triumph-Wager-Stuck-Bullish-Derail7-Thud"
+      },
+      "AppUser": {
+        "Username": "appuser",
+        "Password": "Reliably8-Container-Dyslexia-Moisture-Animosity-Framing"
+      }
+    }
   }
 }
