Untenanted landing page
Show a public landing page with login/register options for untenanted users on the Blazor home page. Tenanted users see the main app content.

--- a/transactionnotes.ApiService/appsettings.json
+++ b/transactionnotes.ApiService/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "TransNotes": {
+    "Authority": "https://auth.nganfamily.com/realms/transactionnotes/",
+    "ClientSecret": "z4PGMetnj3KtCkIIZ2CtxUfAzGT7xI3a",
+    "ClientId": "transactionnotes",
+    "Audience": "transactionnotes"
+  }
 }
