--- a/transactionnotes.AppHost/transactionnotes.AppHost.csproj
+++ b/transactionnotes.AppHost/transactionnotes.AppHost.csproj
@@ -14,7 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\transactionnotes.ApiService\transactionnotes.ApiService.csproj" />
     <ProjectReference Include="..\transactionnotes.Web\transactionnotes.Web.csproj" />
-    <ProjectReference Include="..\transactionnotes.Database\centraldb-migration\centraldb-migration.csproj" />
+    <ProjectReference Include="..\CentralModule\centraldb-migration\centraldb-migration.csproj" />
   </ItemGroup>
 
   <ItemGroup>
